--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "connect-livereload": "^0.5.4",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-util": "^3.0.7",
     "path": "^0.12.7",
     "tiny-lr": "^0.2.1"
   }
