--- a/_config.yml
+++ b/_config.yml
@@ -32,13 +32,7 @@ resources:
 # Collections
 collections:
   - alum_quotes
-
-defaults:
-  - scope:
-      path: ""
-      type: alum_quotes
-    values:
-      layout: brag-card
+  - awards
 
 # Build settings
 markdown: redcarpet
