--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -11,7 +11,7 @@
   position: Program Supervisor
 
 - name: Omar De Arcos
-  position: Administrative Intern
+  position: Network Instructor
 
 - name: Vladimir Jimenez
-  position: Administrative Intern
+  position: Web Development Instructor
