More requested changes
- Content update for awards
- Staff title updates
- Alumni quotes should be static order
- Give past companies more space on desktop view

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -1,5 +1,5 @@
 - name: Carla Fantozzi
-  position: Program Manager
+  position: Program Consultant
 
 - name: Gary Carter
   position: Program Director
@@ -11,7 +11,7 @@
   position: Program Supervisor
 
 - name: Omar De Arcos
-  position: Network Instructor
+  position: Networking Instructor
 
 - name: Vladimir Jimenez
-  position: Web Development Instructor
+  position: Coding Instructor
