--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -1,5 +1,5 @@
 - name: interns
-  type: bar
+  type: line
   title: Internship Placement
   slug: This is a flatline we love
   content: >
@@ -7,9 +7,18 @@
   data:
     labels:
       - 2012
+      - 2013
+      - 2014
       - 2015
     series:
       -
+        - 15
+        - 15
+        - 15
+        - 15
+      -
+        - 15
+        - 15
         - 15
         - 15
 
