--- a/_data/events.yml
+++ b/_data/events.yml
@@ -2,15 +2,19 @@
   date: 2016-02-23
   image: career_day.png
   desc: Staff at Samohi's Career Day
+  link: https://www.eventbrite.com/e/samohi-career-day-tickets-20787124850
 
 - name: Application Closes
   date: 2016-03-15
   image: city_hall-front.jpg
+  link: https://www.eventbrite.com/e/2016-youth-tech-application-tickets-20787208099
 
 - name: 2016 Program Begins
   date: 2016-06-13
   image: council-chambers.jpg
+  link: https://www.eventbrite.com/e/2016-youth-tech-program-day-1-tickets-20787401678
 
 - name: 2016 Pitch Night
   date: 2016-07-21
   image: judges.jpg
+  link: https://www.eventbrite.com/e/2016-youth-tech-pitch-night-tickets-20787585227
