Update stats and charts

--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -78,23 +78,48 @@
       -
         - 13
         - 8
-        - 28
+        - 25
         - 35
 
 - name: ethnicity
   type:
-    primary: pie
+    primary: bar
+    secondary: percent
   title: TDB
   slug: Maintaining a diverse environment
   content: >
     High school students from all backgrounds are working together to successfully create start-ups
+
+    <ul class="ethnicity-legend row">
+        <li class="col-xs-12 col-sm-6 api">Asian/Pacific Islander</li>
+        <li class="col-xs-12 col-sm-6 cw">Caucasian/White</li>
+        <li class="col-xs-12 col-sm-6 hl">Hispanic/Latino</li>
+        <li class="col-xs-12 col-sm-6 aab">African American/Black</li>
+    </ul>
   data:
+    labels:
+      - 2012
+      - 2013
+      - 2014
+      - 2015
     series:
-      - name: Placeholder
-        value: 5
-      - name: Placeholder 2
-        value: 10
-      - name: Placeholder 3
-        value: 15
-      - name: Placeholder 4
-        value: 20
+      - # 2012
+        - 46.15   # Asian/Pacific Islander
+        - 50      # Caucasian/White
+        - 36      # Hispanic/Lation
+        - 22.86   # African American/Black
+      - # 2013
+        - 23.08
+        - 25
+        - 32
+        - 37.14
+      - # 2014
+        - 23.08
+        - 25
+        - 16
+        - 22.86
+      - # 2015
+        - 7.96
+        - 0
+        - 16
+        - 14.14
