Monolithic commit with all the changes requested

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -15,3 +15,9 @@
 
 - name: Vladimir Jimenez
   position: Coding Instructor
+
+- name:
+  position: Lean Start-up Instructor
+
+- name:
+  position: UI/UX Instructor
