--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -84,7 +84,7 @@
 
 - name: ethnicity
   type:
-    primary: line
+    primary: bar
     secondary: percent
   title: 2015 Race/Ethnicity Stats
   slug: Focusing on diversity
@@ -92,44 +92,32 @@
     High school students from all backgrounds are working together to successfully create start-ups.
 
     <ul class="chart-legend row">
-        <li class="col-xs-12 col-sm-6 ct-series-a">African American/Black</li>
-        <li class="col-xs-12 col-sm-6 ct-series-b">American Indian/Alaskan Native</li>
-        <li class="col-xs-12 col-sm-6 ct-series-c">Asian/Pacific Islander</li>
-        <li class="col-xs-12 col-sm-6 ct-series-d">Caucasian/White</li>
-        <li class="col-xs-12 col-sm-6 ct-series-e">Hispanic/Latino</li>
+        <li class="col-xs-12 col-sm-6 ct-series-a">2015 Participants</li>
+        <li class="col-xs-12 col-sm-6 ct-series-b">Santa Monica Population: Census 2010</li>
     </ul>
   data:
     labels:
-      - 2012
-      - 2013
-      - 2014
-      - 2015
+      - Asian/Pacific Islander
+      - Caucasian/White
+      - Hispanic/Latino
+      - African American/Black
+      - American Indian/Alaskan Native
+      - Native Hawaiian and Other Pacific Islander
     series:
-      - # African American/Black
-        - 7.69  # 2012
-        - 0     # 2013
-        - 16    # 2014
-        - 17.14 # 2015
-      - # American Indian/Alaskan Native
-        - 0
-        - 0
-        - 0
-        - 0
-      - # Asian/Pacific Islander
-        - 46.15
-        - 50
-        - 36
-        - 22.86
-      - # Caucasian/White
-        - 23.08
-        - 25
-        - 32
-        - 37.14
-      - # Hispanic/Latino
-        - 23.08
-        - 25
-        - 16
-        - 22.86
+      -
+        - 22.9
+        - 37.1
+        - 22.9
+        - 17.1
+        - 0.0
+        - 0.0
+      -
+        - 9.0
+        - 77.6
+        - 13.1
+        - 3.9
+        - 0.4
+        - 0.1
 
 - name: neighborhood
   type:
@@ -137,7 +125,7 @@
   title: 2015 Santa Monica Neighborhood Breakdown
   slug: Working together as a community
   content: >
-    Students from neighboring areas work together to launch their start-ups
+    Students from neighboring areas work together to launch their start-ups.
 
     <ul class="chart-legend row">
         <li class="col-xs-12 col-sm-6 ct-series-a">Friends of Sunset Park</li>
