--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -6,15 +6,18 @@
 
 - name: Jamila Haji
   position: Program Specialist
+  year: Alumna, 2012
 
 - name: Kenneth Bales
   position: Program Supervisor
 
 - name: Omar De Arcos
   position: Networking Instructor
+  year: Alumnus, 2013
 
 - name: Vladimir Jimenez
   position: Coding Instructor
+  year: Alumnus, 2012
 
 - name:
   position: Lean Start-up Instructor
