--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -110,7 +110,7 @@
     High school students from all backgrounds are working together to successfully create start-ups.
 
     <ul class="chart-legend row">
-        <li class="col-xs-12 col-sm-6 ct-series-a">2015 Participants</li>
+        <li class="col-xs-12 col-sm-6 ct-series-a">2015 Youth Tech Participants</li>
         <li class="col-xs-12 col-sm-6 ct-series-b">Reference Census 2010</li>
     </ul>
   data:
