--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -6,18 +6,18 @@
 
 - name: Jamila Haji
   position: Program Specialist
-  year: Alumna, 2012
+  year: 2012 Alumni
 
 - name: Kenneth Bales
   position: Program Supervisor
 
 - name: Omar De Arcos
   position: Networking Instructor
-  year: Alumnus, 2013
+  year: 2013 Alumni
 
 - name: Vladimir Jimenez
   position: Coding Instructor
-  year: Alumnus, 2012
+  year: 2012 Alumni
 
 - name:
   position: Lean Start-up Instructor
