--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -79,7 +79,7 @@
   title: Program growth
   slug: Look how far we’ve come
   content: >
-    Our program has grown from 13 participants in 2012 to having 35 participants 2015.
+    We have increased the number of participants from 13 in 2012 to 35 in 2015.
 
     <ul class="chart-legend row">
         <li class="col-xs-12 col-sm-6 ct-series-a">Male Participation</li>
