--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -110,7 +110,7 @@
   title: 2015 Race/Ethnicity Stats
   slug: Focusing on diversity
   content: >
-    High school students from all backgrounds are working together to successfully create Startups.
+    Bringing a diverse community together to learn technology.
 
     <ul class="chart-legend row">
         <li class="col-xs-12 col-sm-6 ct-series-a">2015 Youth Tech Participants</li>
