--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,3 +1,8 @@
+- name: Application Closes
+  date: 2016-04-15
+  image: city_hall-front.jpg
+  link: https://www.eventbrite.com/e/2016-youth-tech-application-tickets-20787208099
+
 - name: 2016 Program Begins
   date: 2016-06-13
   image: council-chambers.jpg
