--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -5,7 +5,7 @@
   position: Program Director
 
 - name: Jamila Haji
-  position: Program Specialist
+  position: Lead Program Specialist
   year: 2012 Alumni
 
 - name: Kenneth Bales
@@ -15,12 +15,23 @@
   position: Networking Instructor
   year: 2013 Alumni
 
+- name: Kevin Grossi
+  position: Coding Instructor
+  year: 2012 Alumni
+
 - name: Vladimir Jimenez
   position: Coding Instructor
   year: 2012 Alumni
 
-- name:
-  position: Lean Start-up Instructor
+- name: David Xiao
+  position: Coding Instructor
+  year: 2012 Alumni
 
-- name:
+- name: Samantha Hsieh
+  position: Lean Start-up Instructor
+  year: 2014 Alumni
+
+- name: Kevin Tran
   position: UI/UX Instructor
+  year: 2014 Alumni
+  placeholder: true
