--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Santa Monica Youth Tech Program
 #baseurl: "/youthtechprogram" # the subpath of your site, e.g. /blog/
-url: "http://santamonicayouthtech.com" # the base hostname & protocol for your site
+url: "http://www.santamonicayouthtech.com" # the base hostname & protocol for your site
 application: https://www.surveymonkey.com/r/smytp2016
 
 # Social settings
