--- a/_data/schools.yml
+++ b/_data/schools.yml
@@ -44,6 +44,9 @@
     college: University of California Santa Barbara
     site: http://www.ucsb.edu
 -
+    college: University of California Santa Cruz
+    site: http://www.ucsc.edu/
+-
     college: University of Colorado Boulder
     site: http://www.colorado.edu
 -
