--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -13,22 +13,13 @@
   position: Program Supervisor
 
 # Second row
-- name: Brownie Sibrian
-  position: Program Specialist
-
 - name: Kevin Grossi
   position: Program Specialist/Lead Coding Instructor
   year: 2012 Alumni
 
-- name: Omzee Pitchford
-  position: Collaboration Instructor
-  year: 2015 Alumni
+- name: Brownie Sibrian
+  position: Program Specialist
 
-- name: Maanav Ahluwalia
-  position: App Development Instructor
-  year: 2016 Alumni
-
-# Third row
 - name: Omar De Arcos
   position: Networking Instructor
   year: 2013 Alumni
@@ -37,13 +28,23 @@
   position: Lean Start-up Instructor
   year: 2014 Alumni
 
-- name: Sai Maddali
-  position: Economics Instructor
-
+# Third row
 - name: Kevin Tran
   position: UI/UX Instructor
   year: 2014 Alumni
+
+- name: Maanav Ahluwalia
+  position: App Development Instructor
+  year: 2016 Alumni
   
 - name: Leiloni Reynoso
   position: Business Development Instructor
   year: 2015 Alumni
+
+- name: Omzee Pitchford
+  position: Collaboration Instructor
+  year: 2015 Alumni
+
+# Fourth Row
+- name: Sai Maddali
+  position: Finance/Economics Instructor
